infra/overlays/development/clusterConfigs/dev-ing-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: default-srv
                port:
                  number: 8000
